--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.6.2"
+    "@astrojs/mdx": "^4.2.4",
+    "astro": "^5.6.2",
+    "shiki": "^3.2.2"
   }
 }
