--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "portfolio",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "^4.2.4",
-    "astro": "^5.6.2",
-    "shiki": "^3.2.2"
-  }
+	"name": "portfolio",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"astro": "astro",
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"@astrojs/mdx": "^4.2.4",
+		"astro": "^5.6.2",
+		"shiki": "^3.2.2"
+	},
+	"devDependencies": {
+		"prettier": "3.5.3"
+	}
 }
