--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"shiki": "^3.2.2"
 	},
 	"devDependencies": {
-		"prettier": "3.5.3"
+		"prettier": "3.5.3",
+		"prettier-plugin-astro": "0.14.1"
 	}
 }
