--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.2.4",
+		"@astrojs/vercel": "^8.1.4",
 		"astro": "^5.6.2",
 		"shiki": "^3.2.2"
 	},
