Adding all the blog posts with one of them migrated

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"dev": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"format": "prettier --write .",
-		"migrate-wp": "node --no-warnings wp-to-astro.cjs"
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.2.5",
@@ -17,9 +16,7 @@
 		"shiki": "^3.2.2"
 	},
 	"devDependencies": {
-		"@xmldom/xmldom": "^0.8.10",
 		"prettier": "3.5.3",
-		"prettier-plugin-astro": "0.14.1",
-		"turndown": "^7.1.2"
+		"prettier-plugin-astro": "0.14.1"
 	}
 }
