--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.2.5",
+		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.3.1",
 		"@astrojs/vercel": "^8.1.4",
 		"astro": "^5.7.6",
