feat: adding auto merge config for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
 		":dependencyDashboard",
 		"group:allNonMajor"
 	],
+	"automerge": true,
 	"commitMessageAction": "",
 	"labels": ["dependencies"],
 	"prConcurrentLimit": 3,
