--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.2.5",
@@ -18,6 +20,7 @@
 		"shiki": "^3.2.2"
 	},
 	"devDependencies": {
+		"@playwright/test": "1.55.0",
 		"prettier": "3.6.2",
 		"prettier-plugin-astro": "0.14.1"
 	}
