Implementing the email sending using ses

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/rss": "^4.0.12",
 		"@astrojs/sitemap": "^3.3.1",
 		"@astrojs/vercel": "^8.1.4",
+		"@aws-sdk/client-ses": "^3.907.0",
 		"astro": "^5.7.6",
 		"shiki": "^3.2.2"
 	},
